# ISP_task_v1

./: main.py  pyproject.toml  requirements.txt
