[tool.poetry]
name = "isp-task"
version = "0.1.0"
description = ""
authors = ["kolmlenka <bakhtinaev@my.msu.ru>"]
readme = "README.md"
packages = [{include = "isp_task"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''